tests/ui/statics/mutable_memory_validation.stderr
error[E0080]: constructing invalid value at .x.<deref>: encountered `UnsafeCell` in read-only memory
  --> $DIR/mutable_memory_validation.rs:13:1
   |
LL | const MUH: Meh = Meh { x: unsafe { &mut *(&READONLY as *const _ as *mut _) } };
   | ^^^^^^^^^^^^^^ it is undefined behavior to use this value
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: $SIZE, align: $ALIGN) {
               HEX_DUMP
           }

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
